MS2-US-8 Fix bugs for the SERVERSTATUSCHECK CLASS